@@ -40,6 +40,7 @@
 30. Open source URL when clicking on emblem in now-playing.
 31. Add icon mapping for LMS8.4 new plugins.
 32. Don't hide duplicate icons if top of radio or apps listing.
+33. Restrict browse toolbar title active area to that of text.
 
 4.0.4
 -----
